Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-760

Test failure on test suite sanity, subtest test_180a

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0, Lustre 2.1.1
    • None
    • None
    • 3
    • 4287

      This issue was created by maloo for Chris Gearing <chris@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/2704d7b4-f5a7-11e0-9b90-52540025f9af.

      The sub-test test_180a failed with the following error:

      test failed to respond and timed out

      From log;

      == sanity test 180a: test obdecho on osc == 05:32:38 (1318509158)

          • glibc detected *** awk: malloc(): memory corruption: 0x0000000001c0e1b0 ***

            jay Jinshan Xiong (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: